fix(generator): fix multi-template bugs, improve help